# sprout

./: .clang-format  .gitignore  .projectile  .travis.yml  README.adoc  README.md  README.org  clang-format.sh  sprout.pro  todo.org
source/: .dir-locals.el  CMakeLists.txt  compiler_options.pri  nuke.sh  sprout.pro
source/base/: CMakeLists.txt  base.cmake  base.pro  simd.hpp  simd.inl
source/base/atomic/: CMakeLists.txt  atomic.cmake  atomic.hpp  atomic.pri
source/base/chrono/: CMakeLists.txt  chrono.cmake  chrono.cpp  chrono.hpp  chrono.pri
source/base/color/: color.cpp  color.hpp  color.inl  color.pri  xyz.hpp  xyz.inl
source/base/crypto/: CMakeLists.txt  base64.cpp  base64.hpp  crypto.cmake  crypto.pri  sha1.cpp  sha1.hpp
source/base/debug/: CMakeLists.txt  assert.hpp  debug.cmake  debug.pri
source/base/encoding/: CMakeLists.txt  encoding.cmake  encoding.inl  encoding.pri
source/base/file/: file.cpp  file.hpp  file.pri
source/base/flags/: CMakeLists.txt  flags.cmake  flags.hpp  flags.pri
source/base/json/: CMakeLists.txt  json.cmake  json.cpp  json.hpp  json.pri  json_read_stream.hpp  json_stream.hpp  json_types.hpp  rapidjson_types.hpp
source/base/math/: .directory  CMakeLists.txt  aabb.hpp  aabb.inl  cdf.hpp  cdf.inl  cone.inl  distribution.hpp  distribution.inl  distribution_1d.cpp  distribution_1d.hpp  distribution_1d.inl  distribution_2d.cpp  distribution_2d.hpp  distribution_2d.inl  exp.hpp  frustum.cpp  frustum.hpp  half.hpp  half.inl  interpolated_function.hpp  interpolated_function.inl  interpolated_function_1d.hpp  interpolated_function_1d.inl  interpolated_function_2d.hpp  interpolated_function_2d.inl  interpolated_function_3d.hpp  interpolated_function_3d.inl  mapping.hpp  mapping.inl  math.cmake  math.cpp  math.hpp  math.pri  matrix.hpp  matrix.inl  matrix3x3.hpp  matrix3x3.inl  matrix4x4.hpp  matrix4x4.inl  (+36 more)
source/base/memory/: CMakeLists.txt  align.cpp  align.hpp  align.inl  array.hpp  array.inl  bitfield.hpp  bitfield.inl  buffer.hpp  const.hpp  memory.cmake  memory.pri  tiled_array.hpp  tiled_array.inl  unique.hpp  unique.inl  variant_map.cpp  variant_map.hpp  variant_map.inl
source/base/net/: CMakeLists.txt  net.cmake  net.pri  socket.cpp  socket.hpp
source/base/platform/: CMakeLists.txt  git_version.cmake  platform.cmake  platform.cpp  platform.hpp  platform.pri
source/base/random/: CMakeLists.txt  generator.hpp  generator.inl  random.cmake  random.pri  shuffle.hpp  shuffle.inl
source/base/simd/: CMakeLists.txt  matrix.inl  simd.cmake  simd.hpp  simd.inl  simd.pri  simd_const.hpp  vector.inl
source/base/spectrum/: CMakeLists.txt  aces.hpp  aces.py  blackbody.cpp  blackbody.hpp  discrete.hpp  discrete.inl  heatmap.cpp  heatmap.hpp  interpolated.cpp  interpolated.hpp  mapping.cpp  mapping.hpp  rgb.hpp  rgb.inl  spectrum.cmake  spectrum.hpp  spectrum.inl  spectrum.pri  xyz.cpp  xyz.hpp  xyz.inl
source/base/string/: CMakeLists.txt  string.cmake  string.cpp  string.hpp  string.inl  string.pri
source/base/thread/: CMakeLists.txt  task_queue.hpp  task_queue.inl  thread.cmake  thread.pri  thread_pool.cpp  thread_pool.hpp
source/capi/: CMakeLists.txt  capi.cpp  main.cpp  sprout.h  visibility.h
source/capi-test/: CMakeLists.txt  main.cpp  test.py  test_progressive.py
source/cli/: CMakeLists.txt  any_key.cpp  any_key.hpp  cli.cmake  cli.pro  main.cpp
source/cli/controller/: CMakeLists.txt  camera_controller.cpp  camera_controller.hpp  controller.cmake  controller.pri  controller_progressive.cpp  controller_progressive.hpp  message_handler.cpp  message_handler.hpp
source/cli/options/: CMakeLists.txt  options.cmake  options.cpp  options.hpp  options.pri
source/cli/server/: CMakeLists.txt  client.cpp  client.hpp  message_handler.hpp  server.cmake  server.cpp  server.hpp  server.pri  websocket.cpp  websocket.hpp
source/core/: CMakeLists.txt  core.cmake  core.pro
source/core/baking/: CMakeLists.txt  baking.cmake  baking.pri  baking_driver.cpp  baking_driver.hpp  baking_item.hpp  baking_stencil.cpp  baking_stencil.hpp  baking_worker.cpp  baking_worker.hpp
source/core/exporting/: CMakeLists.txt  exporting.cmake  exporting.pri  exporting_sink.hpp  exporting_sink_ffmpeg.cpp  exporting_sink_ffmpeg.hpp  exporting_sink_image_sequence.cpp  exporting_sink_image_sequence.hpp  exporting_sink_null.cpp  exporting_sink_null.hpp  exporting_sink_statistics.cpp  exporting_sink_statistics.hpp  exporting_srgb.cpp  exporting_srgb.hpp
source/core/file/: CMakeLists.txt  file.cmake  file.cpp  file.hpp  file.pri  file_system.cpp  file_system.hpp  gzip_read_stream.cpp  gzip_read_stream.hpp  read_stream.hpp  read_stream.inl  zstd_read_stream.cpp  zstd_read_stream.hpp
source/core/gzip/: CMakeLists.txt  gzip.cmake  gzip.pri  gzip_read_stream.cpp  gzip_read_stream.hpp
source/core/image/: .directory  CMakeLists.txt  channels.hpp  image.cmake  image.cpp  image.hpp  image.pri  image3.cpp  image3.hpp  image4.cpp  image4.hpp  image_1.cpp  image_1.hpp  image_3.cpp  image_3.hpp  image_4.cpp  image_4.hpp  image_helper.cpp  image_helper.hpp  image_provider.cpp  image_provider.hpp  image_writer.cpp  image_writer.hpp  tiled_image.hpp  tiled_image.inl  typed_image.cpp  typed_image.hpp  typed_image.inl  typed_image_fwd.hpp
source/core/logging/: CMakeLists.txt  log.cpp  log.hpp  log_null.cpp  log_null.hpp  log_std_out.cpp  log_std_out.hpp  log_stdout.cpp  log_stdout.hpp  logging.cmake  logging.cpp  logging.hpp  logging.pri
source/core/progress/: CMakeLists.txt  progress.cmake  progress.pri  progress_sink.hpp  progress_sink_null.cpp  progress_sink_null.hpp  progress_sink_std_out.cpp  progress_sink_std_out.hpp  progress_sink_stdout.cpp  progress_sink_stdout.hpp  sink.hpp  std_out.cpp  std_out.hpp
source/core/rendering/: CMakeLists.txt  context.hpp  rectangle.hpp  renderer.cpp  renderer.hpp  rendering.cmake  (+17 more)
source/di/: CMakeLists.txt  main.cpp
source/extension/: CMakeLists.txt  extension.cmake  extension.pro
source/it/: CMakeLists.txt  difference.cpp  difference.hpp  item.cpp  item.hpp  main.cpp
source/webui/: app.js  index.html  style.css
(+1328 files in other folders)
