add_subdirectory(distribution)
add_subdirectory(filter)
add_subdirectory(fourier)

target_sources(base
    PRIVATE
    "aabb.hpp"
    "aabb.inl"
    "exp.hpp"
    "frustum.cpp"
    "frustum.hpp"
    "interpolated_function.hpp"
    "interpolated_function.inl"
    "mapping.hpp"
    "mapping.inl"
    "math.hpp"
    "matrix.hpp"
    "matrix3x3.hpp"
    "matrix3x3.inl"
    "matrix4x4.hpp"
    "matrix4x4.inl"
    "plane.hpp"
    "plane.inl"
    "print.cpp"
    "print.hpp"
    "quaternion.hpp"
    "quaternion.inl"
    "ray.hpp"
    "ray.inl"
    "sample_distribution.inl"
    "sampling.inl"
    "simd_aabb.hpp"
    "simd_aabb.inl"
    "simd_matrix.hpp"
    "simd_matrix.inl"
    "simd_vector.inl"
    "sincos.hpp"
    "transformation.hpp"
    "transformation.inl"
    "vector.hpp"
    "vector2.hpp"
    "vector2.inl"
    "vector3.hpp"
    "vector3.inl"
    "vector4.hpp"
    "vector4.inl"
    "vector8.hpp"
    )
