add_subdirectory(distribution)
add_subdirectory(filter)
add_subdirectory(fourier)

target_sources(base
    PRIVATE
    "aabb.hpp"
    "aabb.inl"
    "exp.hpp"
    "frustum.cpp"
    "frustum.hpp"
    "half.hpp"
    "half.inl"
    "interpolated_function_1d.hpp"
    "interpolated_function_1d.inl"
    "interpolated_function_2d.hpp"
    "interpolated_function_2d.inl"
    "interpolated_function_3d.hpp"
    "interpolated_function_3d.inl"
    "mapping.hpp"
    "mapping.inl"
    "math.hpp"
    "matrix.hpp"
    "matrix3x3.hpp"
    "matrix3x3.inl"
    "matrix4x4.hpp"
    "matrix4x4.inl"
    "plane.hpp"
    "plane.inl"
    "print.cpp"
    "print.hpp"
    "quaternion.hpp"
    "quaternion.inl"
    "ray.hpp"
    "ray.inl"
    "sample_distribution.inl"
    "sampling.inl"
    "sincos.hpp"
    "transformation.hpp"
    "transformation.inl"
    "vector.hpp"
    "vector2.hpp"
    "vector2.inl"
    "vector3.hpp"
    "vector3.inl"
    "vector4.hpp"
    "vector4.inl"
    "vector8.hpp"
    )
