add_subdirectory(sampler)

target_sources(core
    PRIVATE
    "texture_adapter.hpp"
    "texture_adapter.inl"
    "texture_byte_1_unorm.cpp"
    "texture_byte_1_unorm.hpp"
    "texture_byte_2_snorm.cpp"
    "texture_byte_2_snorm.hpp"
    "texture_byte_2_unorm.cpp"
    "texture_byte_2_unorm.hpp"
    "texture_byte_3_snorm.cpp"
    "texture_byte_3_snorm.hpp"
    "texture_byte_3_srgb.cpp"
    "texture_byte_3_srgb.hpp"
    "texture_byte_3_unorm.cpp"
    "texture_byte_3_unorm.hpp"
    "texture_byte_4_srgb.cpp"
    "texture_byte_4_srgb.hpp"
    "texture_encoding.cpp"
    "texture_encoding.hpp"
    "texture_float_1.cpp"
    "texture_float_1.hpp"
    "texture_float_2.cpp"
    "texture_float_2.hpp"
    "texture_float_3.cpp"
    "texture_float_3.hpp"
    "texture_provider.cpp"
    "texture_provider.hpp"
    "texture_test.cpp"
    "texture_test.hpp"
    "texture_types.hpp"
    "texture.cpp"
    "texture.hpp"
    "texturely.hpp"
    "texturely.inl"
    ) 
