add_subdirectory(triangle)

target_sources(core
    PRIVATE
    "canopy.cpp"
    "canopy.hpp"
    "cube.cpp"
    "cube.hpp"
    "disk.cpp"
    "disk.hpp"
    "distant_sphere.cpp"
    "distant_sphere.hpp"
    "infinite_sphere.cpp"
    "infinite_sphere.hpp"
    "morphable.hpp"
    "node_stack.hpp"
    "node_stack.inl"
    "null.cpp"
    "null.hpp"    
    "plane.cpp"
    "plane.hpp"
    "rectangle.cpp"
    "rectangle.hpp"
    "shape_intersection.hpp"
    "shape_sample.hpp"
    "shape_test.cpp"
    "shape_test.hpp"
    "shape_vertex.cpp"
    "shape_vertex.hpp"
    "shape.cpp"
    "shape.hpp"
    "shape.inl"
    "sphere.cpp"
    "sphere.hpp"
    )  
